--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # This job depends on the build
+    needs:
+      - build
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Download static website archive
