--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           name: static-website
       - name: Upload website to S3
         run: |
-          aws s3 sync --delete --acl public-read /tmp/workspace/public/ "s3://${{ secrets.AWS_BUCKET_NAME }}/"
+          aws s3 sync --delete --acl public-read . "s3://${{ secrets.AWS_BUCKET_NAME }}/"
         env:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
