--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,6 @@ jobs:
       - name: Upload website to S3
         run: |
           aws s3 sync --delete --acl public-read . "s3://${AWS_BUCKET_NAME}/"
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
